fix: enable deploy

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,18 +51,18 @@ jobs:
             BRANCH=${{ github.ref_name }}
 
 
-  # deploy:
-  #   name: Deployment
-  #   runs-on: ubuntu-latest
-  #   needs: [ test, build ]
-  #   if: github.ref_name == 'dev'
-  #   steps:
+  deploy:
+    name: Deployment
+    runs-on: ubuntu-latest
+    needs: [ test, build ]
+    if: github.ref_name == 'dev'
+    steps:
 
-  #     - name: Deployment
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOST_DEV }}
-  #         port: ${{ secrets.PORT_DEV }}
-  #         username: ${{ secrets.USERNAME_DEV }}
-  #         key: ${{ secrets.PRIVATE_KEY_DEV }}
-  #         script: cd csust-got-dev && docker-compose pull && docker-compose up -d --force-recreate
+      - name: Deployment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DEV }}
+          port: ${{ secrets.PORT_DEV }}
+          username: ${{ secrets.USERNAME_DEV }}
+          key: ${{ secrets.PRIVATE_KEY_DEV }}
+          script: cd csust-got-dev && docker-compose pull && docker-compose up -d --force-recreate
