--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,12 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ^1.20
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.51
           args: --issues-exit-code=1
           only-new-issues: false
-          skip-go-installation: false
           skip-pkg-cache: true
           skip-build-cache: true
