--- a/config.yaml
+++ b/config.yaml
@@ -52,5 +52,7 @@ genshin_voice:
 chatgpt:
   key: ""
   max_tokens: 1000
-  temperature: 0.7
+  temperature: 1
   prompt_limit: 500
+  system_prompt: ""
+  keep_context: 0
