--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to harbor
         uses: docker/login-action@v2
         with:
+          registry: ${{ secrets.HARBOR_URL }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -50,19 +51,3 @@ jobs:
             TAG=${{ steps.version.outputs.sha }}
             BRANCH=${{ github.ref_name }}
 
-
-  deploy:
-    name: Deployment
-    runs-on: ubuntu-latest
-    needs: [ test, build ]
-    if: github.ref_name == 'dev'
-    steps:
-
-      - name: Deployment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DEV }}
-          port: ${{ secrets.PORT_DEV }}
-          username: ${{ secrets.USERNAME_DEV }}
-          key: ${{ secrets.PRIVATE_KEY_DEV }}
-          script: cd csust-got-dev && docker-compose pull && docker-compose up -d --force-recreate
