--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,8 +36,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.HARBOR_URL }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWD }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
