--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,21 +32,21 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to harbor
-        uses: docker/login-action@v2
+      - name: Build Image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
         with:
+          image: csust/csust-got
+          tags: latest-${{ github.ref_name }}
+          containerfiles: |
+            ./DockerFile
+
+      - name: Push To harbor
+        id: push-to-harbor
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ secrets.HARBOR_URL }}
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWD }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.HARBOR_URL }}/csust/csust-got:latest-${{ github.ref_name }}
-          build-args: |
-            TAG=${{ steps.version.outputs.sha }}
-            BRANCH=${{ github.ref_name }}
-
