--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,7 +33,7 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: csust/csust-got
+          image: csust/csust-got-hoo
           tags: latest-${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
