--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
 
   build:
-    name: Build
+    name: Build and Push
     runs-on: ubuntu-latest
     steps:
       - name: Get source
@@ -28,21 +28,14 @@ jobs:
         id: "version"
         run: echo "::set-output name=sha::$(git rev-parse --short HEAD)"
 
-      - name: Build and push
+      - name: Build
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
           image: csust/csust-got-hoo
-          tags: |
-            latest-${{ github.ref_name }}
+          tags:  latest-${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
-
-  deploy:
-    name: Deployment
-    runs-on: ubuntu-latest
-    needs: [ test, build ]
-    steps:
       - name: Push To harbor
         id: push-to-harbor
         uses: redhat-actions/push-to-registry@v2
