--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,7 +34,9 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           image: csust/csust-got-hoo
-          tags: latest-${{ github.ref_name }}
+          tags: |
+            latest
+            latest-${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
 
