--- a/config.yaml
+++ b/config.yaml
@@ -41,8 +41,8 @@ message:
 prometheus:
   enabled: false
   address: "prometheus:9090"
-  message_query: 'topk(5, sum(rate(bot_message_count{chat_name="##"}[24h])*(24*3600-5)) by (username))'
-  sticker_query: 'topk(5, sum(rate(bot_message_count{chat_name="##", is_sticker="true"}[24h])*(24*3600-5)) by (username))'
+  message_query: 'topk(5, sum(rate(bot_message_count{chat_id="##"}[24h])*(24*3600-5)) by (username))'
+  sticker_query: 'topk(5, sum(rate(bot_message_count{chat_id="##", is_sticker="true"}[24h])*(24*3600-5)) by (username))'
 
 # 原神语音api
 genshin_voice:
