短链接 &&  重置b站短链接与bv链接到av，替换 twitter.com 到 fxtwitter.com (#202)
* feat: (content filter middleware) 重置b站短链接与bv链接到av，替换 twitter.com 到 fxtwitter.com

* feat: (short url) 生成一个短链接至 https://github.com/Anthony-Hoo/hugeURLer

* feat: (README) 新增命令加入readme

* fix: config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -69,3 +69,23 @@ meili:
 
 mc:
   max_count: 10
+
+github:
+  enabled: false
+  token: ""
+  repo: "csust-got"
+  owner: ""
+  branch: "master"
+  path: "config.yaml"
+  short_url_prefix: "s.csu.st"
+
+content_filter:
+  url_filter:
+    enabled: true
+    bv2av:
+      # telegram uids here
+      enable_user_list:
+        - 123123123
+    tw2fx:
+      enable_user_list:
+        - 123123123
