--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -4,7 +4,7 @@
 # options for analysis running
 run:
   go: "1.20"
-  # default concurrency is a available CPU number
+  # default concurrency is an available CPU number
   concurrency: 16
 
   # timeout for analysis, e.g. 30s, 5m, default is 1m
