add decode command
add logs

fix

fix

Revert "add logs"

This reverts commit ba7758a8a1a0f5b143c01fd872302abf73eef306.

fixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixfixshalefixfixfixfixfixfixfixfixfixfixfix

fix

maybe

change action

change action

change action

change actions

change actions

change actions

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,10 +37,11 @@ jobs:
 
       - name: Push To harbor
         id: push-to-harbor 
-        uses: redhat-actions/push-to-registry@v2
+        uses: CSUSTers/push-to-registry@main
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ secrets.HARBOR_URL }}
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWD }}
+          retry: 1000
