--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,3 +45,8 @@ jobs:
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWD }}
           retry: 1000
+          
+      - name: Restart Kubernetes Deployment
+        id: restart-pod
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/dev" ]; then NAME="csust-got"; elif [ "${{ github.ref }}" == "refs/heads/master" ]; then NAME="csust-got-prod"; fi; curl -X PUT -H "Content-Type: application/yaml" -H "Cookie: ${{ secrets.KubeCookie}}" -d '{"kind":"deployments","namespace":"csust","name":"'"$NAME"'"}' "${{ secrets.KubeURL}}"
