--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -406,7 +406,7 @@ linters-settings:
   staticcheck:
     go: "1.20"
     # https://staticcheck.io/docs/options#checks
-    checks: [ "all" ]
+    checks: ["all", "-ST1001"]
 
   stylecheck:
     go: "1.20"
