--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,24 +3,31 @@
   "features": {
     "ghcr.io/devcontainers/features/go:1": {},
     "ghcr.io/guiyomh/features/golangci-lint:0": {},
-    "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {},
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
+      "plugins": "zsh-autosuggestions zsh-syntax-highlighting",
+      "omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting.git"
+    },
     "ghcr.io/devcontainers/features/sshd:1": {},
-    "ghcr.io/eitsupi/devcontainer-features/jq-likes:1": {}
+    "ghcr.io/eitsupi/devcontainer-features/jq-likes:2.1.0": {},
+    "ghcr.io/itsmechlark/features/redis-server:1": {}
   },
   "customizations": {
     "vscode": {
       "settings": {
         "gitlens.showWelcomeOnInstall": false,
-        "gitlens.showWhatsNewAfterUpgrades": false
+        "gitlens.showWhatsNewAfterUpgrades": false,
+        "terminal.integrated.defaultProfile.linux": "zsh"
       },
       "extensions": [
         "eamodio.gitlens",
         "esbenp.prettier-vscode",
         "ms-python.python",
         "mutantdino.resourcemonitor",
-        "ms-vscode.makefile-tools"
+        "ms-vscode.makefile-tools",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
       ]
     }
-  }
+  },
+  "runArgs": ["--env-file",".devcontainer/devcontainer.env"]
 }
