--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -492,6 +492,7 @@ linters-settings:
           - github.com/prometheus/common
           - github.com/prometheus/client_golang
           - github.com/gabriel-vasile/mimetype
+          - github.com/u2takey/ffmpeg-go
         # Packages that are not allowed where the value is a suggestion.
         deny:
           # - pkg: "github.com/sirupsen/logrus"
