--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,6 +34,7 @@ jobs:
             latest-${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
+          layers: true
 
       - name: Push To harbor
         id: push-to-harbor 
