feat(logging): add log file directory configuration and create logs directory
Co-authored-by: Hugefiver <i@iruri.moe>

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ fabric.properties
 data/
 
 .vscode/
+.idea/
 
 # output
 got
@@ -126,3 +127,4 @@ csust-got.exe
 a.http
 .idea/GitLink.xml
 dictionary.txt
+/logs
