--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,13 +23,13 @@ jobs:
     steps:
 
       - name: Get source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3 
 
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: csust/csust-got-hoo
+          image: csusters/csust-got
           tags: |
             latest-${{ github.ref_name }}
           containerfiles: |
@@ -42,9 +42,9 @@ jobs:
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ secrets.HARBOR_URL }}
-          username: ${{ secrets.HARBOR_USERNAME }}
-          password: ${{ secrets.HARBOR_PASSWD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           retry: 1000
           
       - name: Restart Kubernetes Deployment
