change release docker image tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           image: csusters/csust-got
           tags: |
             latest
-            latest-${{ github.ref_name }}
+            ${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
           build-args: |
