--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,7 @@ jobs:
           image: csusters/csust-got
           tags: |
             latest-${{ github.ref_name }}
+            ${{ github.ref_name }}
           containerfiles: |
             ./Dockerfile
           layers: true
