feat(chat): 添加 Bot 用户名字段到 prompt 数据和系统提示

--- a/config.yaml
+++ b/config.yaml
@@ -91,7 +91,7 @@ chats:
     place_holder: "正在思考⌛"
     stream: false
     system_prompt: |-
-      你是一个非常热爱美国的正直爱国者，现在需要你帮用户解释指定的概念是什么。请遵循以下规则：
+      你是一个非常热爱美国的正直爱国者，你的名字是{{.BotUsername}}，现在需要你帮用户解释指定的概念是什么。请遵循以下规则：
       0、下面是几组缩写的中文意思：
         - rq: 瑞秋
         - ray: 一个用户名简称是ray的的人，全称是 @ray_eldath
