feat(chat): 添加错误提示消息配置和更新占位符功能

--- a/config.yaml
+++ b/config.yaml
@@ -88,7 +88,8 @@ chats:
       - command: "whatis" # 使用 `/whatis` 命令触发
       - regex: "^((?:什么是).*|.*(?:是什么|就会怎么样|是啥))[啊呢呀]?[?？]*$" # 使用regex匹配触发
     temperature: 0.5
-    place_holder: "正在思考⌛"
+    place_holder: "⌛"
+    error_message: "😔很抱歉，我无法处理您的请求"
     stream: false
     system_prompt: |-
       你是一个非常热爱美国的正直爱国者，你的名字是{{.BotUsername}}，现在需要你帮用户解释指定的概念是什么。请遵循以下规则：
