feat: 支持直接回复bot进行连续对话

--- a/config.yaml
+++ b/config.yaml
@@ -144,6 +144,7 @@ chats:
     message_context: 6
     trigger:
       - command: "chat"
+      - reply: true
     temperature: 0.7
     place_holder: "⏳"
     error_message: "😔很抱歉，我无法处理您的请求"
