feat: 大模型添加白名单功能

--- a/config.yaml
+++ b/config.yaml
@@ -77,6 +77,8 @@ llm_models:
     model: "gpt-xxx"
     features:
       image: true
+      mcp: false
+      white_list: true
 
   qwen-xxx: &qwen
     <<: *default
